Undo sticky footer to fix overlapping content

--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,8 @@
 }
 
 html, body, #root {
-  height: 100%
+  height: 100%;
+  width: 100%;
 }
 
 h1 {
